--- a/Frontend/caffefront/src/app/admin-login/admin-login.component.html
+++ b/Frontend/caffefront/src/app/admin-login/admin-login.component.html
@@ -1,1 +1,16 @@
-<p>admin-login works!</p>
+
+<div class="col-sm-9">
+    <h2>Admin Login Here </h2>
+    <form>
+        <div class="form-group">
+        <label for="emailid">Email address:</label>
+          <input type="email" class="form-control" id="emailid" name="emailid">
+        </div>
+        <div class="form-group">
+          <label for="pwd">Password:</label>
+          <input type="password" class="form-control" id="password" name="password">
+        </div>
+        
+        <button type="submit"  class="btn btn-primary">Submit</button>
+      </form>
+      </div>
