--- a/Frontend/caffefront/src/app/home/home.component.html
+++ b/Frontend/caffefront/src/app/home/home.component.html
@@ -1,1 +1,33 @@
-<p>home works!</p>
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol> 
+   
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="i5.jpg" style="width: 100%;height: 100%;">
+      </div>
+  
+      <div class="item">
+        <img src="i6.jpg" style="width: 100%;height: 100%;">
+      </div>
+  
+      <div class="item">
+        <img src="i2.jpg" style="width: 100%;height: 100%;">
+      </div>
+    </div>
+  
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
