--- a/Frontend/caffefront/src/app/login/login.component.html
+++ b/Frontend/caffefront/src/app/login/login.component.html
@@ -1,1 +1,16 @@
-<p>login works!</p>
+
+<div class="col-sm-9">
+    <h2>Login Here</h2>
+    <form(ngSubmit)="submitdata()">
+        <div class="form-group">
+        <label for="emailid">Email address:</label>
+          <input type="email" class="form-control" id="emailid" name="emailid" [(ngModel)]="reg.emailid">
+        </div>
+        <div class="form-group">
+          <label for="pwd">Password:</label>
+          <input type="password" class="form-control" id="password" name="password"  [(ngModel)]="reg.password">
+        </div>
+        
+        <button type="submit"  class="btn btn-primary">Submit</button>
+      </form>
+      </div>
