--- a/Frontend/caffefront/src/app/navbar/navbar.component.html
+++ b/Frontend/caffefront/src/app/navbar/navbar.component.html
@@ -6,9 +6,10 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" routerLink="/">Caffe Site</a>
+        <a class="navbar-brand" routerLink="/">Coffee Shop</a>
       </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
+      <div[ngswitch]="menutype">
+      <div class="collapse navbar-collapse" id="myNavbar" *ngSwitchCase="'guest'">
         <ul class="nav navbar-nav">
           <li class="active"><a routerLink="/">Home</a></li>
           <li><a routerLink="/services">Services</a></li>
@@ -21,6 +22,21 @@
           <li><a routerLink="/adminlogin"><span class="glyphicon glyphicon-user"></span> Admin Login</a></li>
         </ul>
           
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar" *ngSwitchCase="'user'">
+        <ul class="nav navbar-nav">
+          <li class="active"><a routerLink="/">Home</a></li>
+          <li><a routerLink="/services">Services</a></li>
+          <li><a routerLink="/feedback">Feedback</a></li>
+    
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+
+          <li><a (Click)="logout()"><span class="glyphicon glyphicon-user"></span> Logout</a></li>
+          
+        </ul>
+          
+        </div>
         </div>
     </div>
   </nav>
