--- a/Frontend/caffefront/src/app/register/register.component.html
+++ b/Frontend/caffefront/src/app/register/register.component.html
@@ -1,1 +1,45 @@
-<p>register works!</p>
+<div class="col-sm-9">
+<h2>Register Here</h2>
+<form (ngSubmit)="submitdata()">
+    <div class="form-group">
+      <label for="name">Name:</label>
+      <input type="text" class="form-control" id="name" name="name" [(ngModel)]="reg.name">
+    </div>
+    <div class="form-group">
+      <label for="address">Address:</label>
+      <input type="address" class="form-control" id="address" name="address" [(ngModel)]="reg.address">
+    </div>
+    <div class="form-group">
+    <label for="city">City:</label>
+      <select class="form-control" id="city" name="city" [(ngModel)]="reg.city">
+        <option value="">--select</option>
+        <option>Satara</option>
+        <option>Nimsod</option>
+        <option>Wai</option>
+      </select>
+    </div>
+    <label>Gender:</label>
+    
+    <label class="radio-inline">
+      <input type="radio" name="gender" value="Male"
+        [(ngModel)]="reg.gender">Male</label>
+    <label class="radio-inline"><input type="radio" name="gender" value="Female"
+      [(ngModel)]="reg.gender">Female</label>
+    <label class="radio-inline"><input type="radio" name="gender" value="Other"
+      [(ngModel)]="reg.gender">Other</label>
+    <div class="form-group">
+      <label for="contact">Contact:</label>
+      <input type="contact" class="form-control" id="contact" name="contact"[(ngModel)]="reg.contact">
+</div>
+    <div class="form-group">
+    <label for="emailid">Email address:</label>
+      <input type="email" class="form-control" id="emailid" name="emailid"[(ngModel)]="reg.emailid">
+    </div>
+    <div class="form-group">
+      <label for="pwd">Password:</label>
+      <input type="password" class="form-control" id="password" name="password"[(ngModel)]="reg.password">
+    </div>
+    
+    <button type="submit"  class="btn btn-primary">Submit</button>
+  </form>
+  </div>
