--- a/Frontend/caffefront/src/app/navbar/navbar.component.html
+++ b/Frontend/caffefront/src/app/navbar/navbar.component.html
@@ -8,12 +8,12 @@
         </button>
         <a class="navbar-brand" routerLink="/">Coffee Shop</a>
       </div>
-      <div[ngswitch]="menutype">
+      <div [ngSwitch]="menutype">
       <div class="collapse navbar-collapse" id="myNavbar" *ngSwitchCase="'guest'">
         <ul class="nav navbar-nav">
           <li class="active"><a routerLink="/">Home</a></li>
           <li><a routerLink="/services">Services</a></li>
-          <li><a routerLink="/feedback">Feedback</a></li>
+          <li><a routerLink="/vfeedback">Feedback</a></li>
     
         </ul>
         <ul class="nav navbar-nav navbar-right">
@@ -32,11 +32,27 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
 
-          <li><a (Click)="logout()"><span class="glyphicon glyphicon-user"></span> Logout</a></li>
+          <li><a (click)="logout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
           
         </ul>
           
-        </div>
-        </div>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar" *ngSwitchCase="'admin'">
+        <ul class="nav navbar-nav">
+          <li class="active"><a routerLink="/">Home</a></li>
+          <li><a routerLink="/mservices">Manage Services</a></li>
+          <li><a routerLink="/vfeedback">View Feedback</a></li>
+          <li><a routerLink="/vregister">View Register</a></li>
+          
+    
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+
+          <li><a (click)="alogout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+          
+        </ul>
+          
+      </div>
     </div>
-  </nav>
+  </div> 
+ </nav>
