--- a/Frontend/caffefront/src/app/register/register.component.html
+++ b/Frontend/caffefront/src/app/register/register.component.html
@@ -1,7 +1,25 @@
-<div class="col-sm-9">
-<h2>Register Here</h2>
-<form (ngSubmit)="submitdata()">
-    <div class="form-group">
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-sm-3">
+        <h3 class="page-header">
+           <b>Our Specialities</b>
+          
+        </h3>
+        <ul class="list-group">
+          <li class="list-group-item">Expresso & Classic</li>
+          <li class="list-group-item">Cappuccino</li>
+          <li class="list-group-item">Cold Brew</li>
+          <li class="list-group-item">Caffe Latte</li>
+          <li class="list-group-item">Flat White</li>
+          <li class="list-group-item">Americano</li>
+          <li class="list-group-item">Hot Chocolate</li>
+          <li class="list-group-item">Cad-M & Cad-B</li>
+        </ul>
+     </div>
+      <div class="col-sm-9">
+          <h1 class="text-center">Register Here</h1>
+        <form (ngSubmit)="submitdata()">
+           <div class="form-group">
       <label for="name">Name:</label>
       <input type="text" class="form-control" id="name" name="name" [(ngModel)]="reg.name">
     </div>
@@ -12,14 +30,13 @@
     <div class="form-group">
     <label for="city">City:</label>
       <select class="form-control" id="city" name="city" [(ngModel)]="reg.city">
-        <option value="">--select</option>
+        <option value="">--select--</option>
         <option>Satara</option>
         <option>Nimsod</option>
         <option>Wai</option>
       </select>
     </div>
     <label>Gender:</label>
-    
     <label class="radio-inline">
       <input type="radio" name="gender" value="Male"
         [(ngModel)]="reg.gender">Male</label>
@@ -29,17 +46,20 @@
       [(ngModel)]="reg.gender">Other</label>
     <div class="form-group">
       <label for="contact">Contact:</label>
-      <input type="contact" class="form-control" id="contact" name="contact"[(ngModel)]="reg.contact">
-</div>
+      <input type="tel" class="form-control" id="contact" name="contact"[(ngModel)]="reg.contact">
+    </div>
     <div class="form-group">
-    <label for="emailid">Email address:</label>
+      <label for="emailid">Email address:</label>
       <input type="email" class="form-control" id="emailid" name="emailid"[(ngModel)]="reg.emailid">
     </div>
     <div class="form-group">
-      <label for="pwd">Password:</label>
+      <label for="password">Password:</label>
       <input type="password" class="form-control" id="password" name="password"[(ngModel)]="reg.password">
     </div>
     
     <button type="submit"  class="btn btn-primary">Submit</button>
   </form>
+    </div>
   </div>
+</div>
+
