--- a/Frontend/caffefront/src/app/view-register/view-register.component.html
+++ b/Frontend/caffefront/src/app/view-register/view-register.component.html
@@ -1,1 +1,28 @@
-<p>view-register works!</p>
+<div class="container">
+    <h1 class="text-center">Registrations</h1>
+    <table class="table-border">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Address</th>
+                <th>City</th>
+                <th>Gender</th>
+                <th>Contact</th>
+                <th>Email Id</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let r of rarr">
+                <td>{{r.regid}}</td>
+                <td>{{r.name}}</td>
+                <td>{{r.address}}</td>
+                <td>{{r.city}}</td>
+                <td>{{r.gender}}</td>
+                <td>{{r.contact}}</td>
+                <td>{{r.emailid}}</td>
+            </tr>
+        </tbody>
+    </table>
+
+</div>
